2008-07-19  Inge Wallin  <inge@lysator.liu.se>

	Cleanup: Make the d pointer actually be named d.
	* src/lib/geodata/data/GeoDataPolygon.{h,cpp},
	* src/lib/geodata/data/GeoDataGeometry.{h,cpp},
	* src/lib/geodata/data/GeoDataCoordinates.{h,cpp},
	* src/lib/geodata/data/GeoDataHotSpot.{h,cpp}: rename the d pointer.
	
2008-07-18  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/geodata/handlers/dgml/DgmlDownloadUrlTagHandler.cpp:
    * src/lib/geodata/scene/GeoSceneTexture.cpp:
    * src/lib/geodata/scene/GeoSceneTexture.h:
    * data/maps/earth/openstreetmap/openstreetmap.dgml:

    Implement round robin algorithm for fetching tiles.
    This was brought up by the OpenStreetMap tile server admins.
    This was committed in trunk on 2008-07-16 and is part of the
    performance fix for downloading OSM tiles (Bug 162681).

2008-07-07  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/geodata/data/GeoDataPoint.{cpp,h}:

    optimize a bit - this was done by the compiler before though

2008-07-07  Torsten Rahn <rahn@kde.org>

    * src/KdeMainWindow.cpp:
    * src/lib/MarbleNavigationSettingsWidget.ui:
    * src/lib/MarbleWidget.{cpp,h}:
    * src/lib/MarbleMap.{cpp,h}:
    * src/lib/MarblePluginSettingsWidget.{cpp,h,ui}:
    * src/lib/MarbleCacheSettingsWidget.{cpp,h,ui}:
    * src/lib/MarbleWidgetInputHandler.cpp:
    * src/lib/MarbleAbstractLayer.{cpp,h}:
    * src/lib/MarbleViewSettingsWidget.ui:
    * src/lib/PlaceMarkInfoDialog.cpp:
    * src/lib/global.h:
    * src/lib/MarbleModel.{cpp,h}:
    * src/lib/LayerManager.{cpp,h}:
    * src/lib/CMakeLists.txt:
    * src/lib/LayerManager.cpp:
    * src/lib/geodata/data/GeoDataCoordinates.{cpp,h}:
    * src/lib/geodata/data/GeoDataFeature.{cpp,h}:
    * src/marble.kcfg:
    * src/marble_part.{cpp,h,rc}:

    Fixing Settings Dialog:
    - Displaying Plugins
    - Enabling Animated Travel Checkbox
    - Enabling Change of Degree Notation

2008-07-07  Patrick Spendrin    <ps_ml@gmx.de>
